# menu-courier

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 80f7d881e17b_create_subscriptions_and_sent_menus_.py  b960e6c756cf_add_send_images_to_subscriptions.py  d8e566dea3c3_change_sent_menus_image_url_to_image_.py  e55d0ce06ed6_add_platform_column_and_rename_facebook_.py  f91efdc1c37c_add_text_filter_to_subscriptions.py
src/menu_courier/: cli.py  config.py  pipeline.py
src/menu_courier/messenger/: client.py
src/menu_courier/scraping/: apify_source.py  base.py  factory.py
src/menu_courier/storage/: db.py  models.py  repository.py
tests/: test_apify_source.py  test_messenger_client.py  test_pipeline.py
