[project]
name = "menu-courier"
version = "0.1.0"
description = "Scrapes a restaurant's Facebook daily menu and delivers it via Messenger"
authors = [
    {name = "Maciej Terlecki",email = "maciek.terlecki1807@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
]

[tool.poetry]
packages = [{include = "menu_courier", from="src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.21,<0.16.0)",
    "mypy (>=2.2.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "responses (>=0.26.2,<0.27.0)",
    "detect-secrets (>=1.5.0,<2.0.0)"
]
